--- a/airflow.cfg
+++ b/airflow.cfg
@@ -240,7 +240,7 @@ error_logfile = -
 # This is only applicable for the flask-admin based web UI (non FAB-based).
 # In the FAB-based web UI with RBAC feature,
 # access to configuration is controlled by role permissions.
-expose_config = False
+expose_config = True
 
 # Set to true to turn on authentication:
 # https://airflow.apache.org/security.html#web-authentication
